--- a/equipos/girona/girona.html
+++ b/equipos/girona/girona.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/betis.png" alt="" width="40px">
+            <img src="../../img/girona.png" alt="" width="40px">
             <h4 class="text-white ms-2 mt-1">Girona</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
