--- a/equipos/osasuna/osasuna.html
+++ b/equipos/osasuna/osasuna.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/betis.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Girona</h4>
+            <img src="../../img/osasuna.png" alt="" width="40px">
+            <h4 class="text-white ms-2 mt-1">Osasuna</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
@@ -85,7 +85,7 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorCelta.png">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorOsasuna.png">
                 </img>
 
                 <h2>Jaroba Arrasate</h2>
@@ -107,7 +107,7 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/sergioHerrera.png">
                 </img>
 
                 <h2>Sergio Herrera</h2>
@@ -115,7 +115,7 @@
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/aitorFernandez.png">
                 </img>
 
                 <h2>Aitor Fernández</h2>
@@ -133,7 +133,7 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/juanCruz.png">
                 </img>
 
                 <h2>Juan Cruz</h2>
@@ -141,7 +141,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/unaiGarcia.png">
                 </img>
 
                 <h2>Unai García</h2>
@@ -149,7 +149,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/davidGarcia.png">
                 </img>
 
                 <h2>David García</h2>
@@ -164,7 +164,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/jesusAreso.png">
                 </img>
 
                 <h2>Jesús Areso</h2>
@@ -172,7 +172,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/rubenPeña.png">
                 </img>
 
                 <h2>Rubén Peña</h2>
@@ -180,7 +180,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/johanMojica.png">
                 </img>
 
                 <h2>Johan Mojica</h2>
@@ -190,7 +190,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/alejandroCatena.png">
                 </img>
 
                 <h2>Alejandro Catena</h2>
@@ -200,7 +200,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/jorgeHerrando.png">
                 </img>
 
                 <h2>Jorge Herrando</h2>
@@ -219,7 +219,7 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/lucasTorro.png">
                 </img>
 
                 <h2>Lucas Torró</h2>
@@ -227,7 +227,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/jonMoncayola.png">
                 </img>
 
                 <h2>Jon Moncayola</h2>
@@ -235,7 +235,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/aimarOroz.png">
                 </img>
 
                 <h2>Aimar Oroz</h2>
@@ -250,7 +250,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/rubenGarcia.png">
                 </img>
 
                 <h2>Rubén García</h2>
@@ -258,7 +258,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/moiGomez.png">
                 </img>
 
                 <h2>Moi Gómez</h2>
@@ -266,7 +266,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/pabloIbañez.png">
                 </img>
 
                 <h2>Pablo Ibáñez</h2>
@@ -274,7 +274,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/ikerMuñoz.png">
                 </img>
 
                 <h2>Iker Muñoz</h2>
@@ -294,7 +294,7 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/kikeBarja.png">
                 </img>
 
                 <h2>Kike Barja</h2>
@@ -302,7 +302,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/anteBudimir.png">
                 </img>
 
                 <h2>Ante Budimir</h2>
@@ -310,7 +310,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/raulGarcia.png">
                 </img>
 
                 <h2>Raúl García</h2>
@@ -321,17 +321,6 @@
 
 
             <!-- DELANTEROS CON MARGEN -->
-
-
-
-            <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
-                </img>
-
-                <h2>Javi Llabrés</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
-            </div><!-- /.col-lg-4 -->
 
             
         </div><!-- /.row -->
