--- a/equipos/rayo/rayo.html
+++ b/equipos/rayo/rayo.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/betis.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Girona</h4>
+            <img src="../../img/rayo.png" alt="" width="40px">
+            <h4 class="text-white ms-2 mt-1">Rayo</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
@@ -85,7 +85,7 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorCelta.png">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorRayo.png">
                 </img>
 
                 <h2>Iñigo Perez</h2>
@@ -107,7 +107,7 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/stoleDimitrievski.png">
                 </img>
 
                 <h2>Stole Dimitrievski</h2>
@@ -115,7 +115,7 @@
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/daniCardenas.png">
                 </img>
 
                 <h2>Dani Cardenas</h2>
@@ -133,7 +133,7 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/pepChavariia.png">
                 </img>
 
                 <h2>Pep Chavarría</h2>
@@ -141,15 +141,15 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/martinPascual.png">
                 </img>
 
-                <h2>Matín Pascual</h2>
+                <h2>Martín Pascual</h2>
                 <h5>Defensa central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/aridaneHernandez.png">
                 </img>
 
                 <h2>Aridane Hernández</h2>
@@ -164,7 +164,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/alfonsoEspino.png">
                 </img>
 
                 <h2>Alfonso Espino</h2>
@@ -172,7 +172,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/abdulMumin.png">
                 </img>
 
                 <h2>Abdul Mumin</h2>
@@ -180,7 +180,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/ivanBalliu.png">
                 </img>
 
                 <h2>Iván Balliu</h2>
@@ -190,7 +190,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/florianLejeune.png">
                 </img>
 
                 <h2>Florian Lejeune</h2>
@@ -209,7 +209,7 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/josePozo.png">
                 </img>
 
                 <h2>José Pozo</h2>
@@ -217,7 +217,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/isipalazon.png">
                 </img>
 
                 <h2>Isi Palazón</h2>
@@ -225,7 +225,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/oscarTtrejo.png">
                 </img>
 
                 <h2>Óscar Trejo</h2>
@@ -240,7 +240,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/randyNteka.png">
                 </img>
 
                 <h2>Randy Nteka</h2>
@@ -248,7 +248,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/kikePerez.png">
                 </img>
 
                 <h2>Kike Pérez</h2>
@@ -256,15 +256,15 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/unaiLopez.png">
                 </img>
 
-                <h2>Una López</h2>
+                <h2>Unai López</h2>
                 <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/alvaroGarcia.png">
                 </img>
 
                 <h2>Alvaro García</h2>
@@ -273,7 +273,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/patheCiss.png">
                 </img>
 
                 <h2>Pathé Ciss</h2>
@@ -282,7 +282,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/oscarValentin.png">
                 </img>
 
                 <h2>Óscar Valentin</h2>
@@ -302,7 +302,7 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/radamelFalcao.png">
                 </img>
 
                 <h2>Radamel Falcao</h2>
@@ -310,7 +310,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/bebe.png">
                 </img>
 
                 <h2>Bebé</h2>
@@ -318,7 +318,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/jorgeDeFrutos.png">
                 </img>
 
                 <h2>Jorge de Frutos</h2>
@@ -333,7 +333,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/raulDeTomas.png">
                 </img>
 
                 <h2>Raúl de Tomas</h2>
@@ -342,7 +342,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/sergioCamello.png">
                 </img>
 
                 <h2>Sergio Camello</h2>
