--- a/equipos/sevilla/sevilla.html
+++ b/equipos/sevilla/sevilla.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/betis.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Girona</h4>
+            <img src="../../img/sevilla.png" alt="" width="40px">
+            <h4 class="text-white ms-2 mt-1">Sevilla</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
@@ -85,7 +85,7 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorCelta.png">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorSevilla.png">
                 </img>
 
                 <h2>Quique Sánchez Flores</h2>
@@ -107,7 +107,7 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/markoDimitrovic.png">
                 </img>
 
                 <h2>Marko Dmitrovic</h2>
@@ -115,7 +115,7 @@
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/orjanNyland.png">
                 </img>
 
                 <h2>Ørjan Nyland</h2>
@@ -133,7 +133,7 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/kikeSalas.png">
                 </img>
 
                 <h2>Kike Salas</h2>
@@ -141,7 +141,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/adriaPedrosa.png">
                 </img>
 
                 <h2>Adriá Pedrosa</h2>
@@ -149,7 +149,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/sergioRamos.png">
                 </img>
 
                 <h2>Sergio Ramos</h2>
@@ -164,7 +164,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/tanguyNianzou.png">
                 </img>
 
                 <h2>Tanguy Nianzou</h2>
@@ -172,7 +172,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/jesusNavas.png">
                 </img>
 
                 <h2>Jesús Navas</h2>
@@ -180,7 +180,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/marcosAcuña.png">
                 </img>
 
                 <h2>Marcos Acuña</h2>
@@ -190,7 +190,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/loicBade.png">
                 </img>
 
                 <h2>Loïc Badé</h2>
@@ -200,7 +200,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/marcao.png">
                 </img>
 
                 <h2>Marcão</h2>
@@ -209,10 +209,10 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/loicBade.png">
                 </img>
 
-                <h2>Diego Hormigo</h2>
+                <h2>Loic Bade</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -228,7 +228,7 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/lucasOcampos.png">
                 </img>
 
                 <h2>Lucas Ocampos</h2>
@@ -236,7 +236,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/nemanjaGudelj.png">
                 </img>
 
                 <h2>Nemanja Gudelj</h2>
@@ -244,7 +244,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/suso.png">
                 </img>
 
                 <h2>Suso</h2>
@@ -259,7 +259,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/joanJordan.png">
                 </img>
 
                 <h2>Joan Jordán</h2>
@@ -267,7 +267,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/erikLamela.png">
                 </img>
 
                 <h2>Érik Lamela</h2>
@@ -275,7 +275,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/djibrilSow.png">
                 </img>
 
                 <h2>Djibril Sow</h2>
@@ -283,7 +283,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/oliverTorres.png">
                 </img>
 
                 <h2>Óliver Torres</h2>
@@ -292,7 +292,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/boubakarySoumare.png">
                 </img>
 
                 <h2>Boubakary Soumaré</h2>
@@ -301,7 +301,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/adnanJanuzaj.png">
                 </img>
 
                 <h2>Adnan Januzaj</h2>
@@ -310,7 +310,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/juanluSanchez.png">
                 </img>
 
                 <h2>Juanlu Sanchez</h2>
@@ -330,7 +330,7 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/rafaMir.png">
                 </img>
 
                 <h2>Rafa Mir</h2>
@@ -338,7 +338,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/dodiLukebalio.png">
                 </img>
 
                 <h2>Dodi Lukébakio</h2>
@@ -346,7 +346,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/youssefEnNesyri.png">
                 </img>
 
                 <h2>Youssef En-Nesyri</h2>
@@ -361,7 +361,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/sevilla/isaacRomero.png">
                 </img>
 
                 <h2>Isaac Romero</h2>
