--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Almeria</h2>
-                    <p><a class="btn btn-secondary bg-success" href="equipos/almeria/almeria.html" target="_blank">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/almeria/almeria.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
