--- a/equipos/cadiz/asistencias.html
+++ b/equipos/cadiz/asistencias.html
@@ -36,7 +36,7 @@
                             <li><a class="dropdown-item" href="partidosJugados.html">Partidos Jugados</a></li>
                             <li><a class="dropdown-item" href="goles.html">Goles</a></li>
                             <li><a class="dropdown-item" href="asistencias.html">Asistencias</a></li>
-                            <li><a class="dropdown-item" href="asistencias.html">Tarjetas asistencias</a></li>
+                            <li><a class="dropdown-item" href="amarillas.html">Tarjetas amarillas</a></li>
                             <li><a class="dropdown-item" href="rojas.html">Tarjetas rojas</a></li>
                             <li><a class="dropdown-item" href="temporadas.html">Temporadas en el club</a></li>
                         </ul>
