--- a/equipos/almeria/amarillas.html
+++ b/equipos/almeria/amarillas.html
@@ -67,7 +67,7 @@
                 </img>
 
                 <h2>Luís Maximiliano</h2>
-                <h5>Portero</h5>
+                <h5>2 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -75,7 +75,7 @@
                 </img>
 
                 <h2>Fernando Martínez</h2>
-                <h5>Portero</h5>
+                <h5>3 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
@@ -93,7 +93,7 @@
                 </img>
 
                 <h2>Edgar Gonzaléz</h2>
-                <h5>Defensa Central</h5>
+                <h5>6 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
@@ -101,7 +101,7 @@
                 </img>
 
                 <h2>Alex Pozo</h2>
-                <h5>Lateral</h5>
+                <h5>4 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
@@ -109,7 +109,7 @@
                 </img>
 
                 <h2>Marc Pubill</h2>
-                <h5>Lateral</h5>
+                <h5>6 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -124,7 +124,7 @@
                 </img>
 
                 <h2>Álex Centelles</h2>
-                <h5>Lateral</h5>
+                <h5>8 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -132,7 +132,7 @@
                 </img>
 
                 <h2>Chumi</h2>
-                <h5>Defensa central</h5>
+                <h5>2 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -140,7 +140,7 @@
                 </img>
 
                 <h2>César Montes</h2>
-                <h5>Lateral</h5>
+                <h5>7 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -160,7 +160,7 @@
                 </img>
 
                 <h2>Iddrisu Baba</h2>
-                <h5>Mediocentro</h5>
+                <h5>6 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -168,7 +168,7 @@
                 </img>
 
                 <h2>Lucas Robertone</h2>
-                <h5>Mediocentro ofensivo</h5>
+                <h5>2 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -176,7 +176,7 @@
                 </img>
 
                 <h2>Dion Lopy</h2>
-                <h5>Defensa Central</h5>
+                <h5>4 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -191,7 +191,7 @@
                 </img>
 
                 <h2>Gonzalo Melero</h2>
-                <h5>Mediocentro</h5>
+                <h5>6 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -199,7 +199,7 @@
                 </img>
 
                 <h2>Sergio Arribas</h2>
-                <h5>Mediocentro ofensivo</h5>
+                <h5>0 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -219,7 +219,7 @@
                 </img>
 
                 <h2>Largie Ramazani</h2>
-                <h5>Extremo</h5>
+                <h5>4 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -227,7 +227,7 @@
                 </img>
 
                 <h2>Luis Suarez</h2>
-                <h5>Delantero centro</h5>
+                <h5>2 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -235,7 +235,7 @@
                 </img>
 
                 <h2>Adri Embarba</h2>
-                <h5>Extremo</h5>
+                <h5>11 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -250,7 +250,7 @@
                 </img>
 
                 <h2>Léo Baptistao</h2>
-                <h5>Delantero centro</h5>
+                <h5>6 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -258,7 +258,7 @@
                 </img>
 
                 <h2>Ibrahima Koné</h2>
-                <h5>Delantero centro</h5>
+                <h5>1 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
@@ -266,7 +266,7 @@
                 </img>
 
                 <h2>Marezi</h2>
-                <h5>Delantero centro</h5>
+                <h5>0 amarillas</h5>
                 <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
